Clear Data and Candidate Analysis